<resources>
    <string name="app_name">Money Converter</string>
    <string name="enter_value">Enter your amount</string>
    <string name="convert_button">Convert</string>
    <string name="result">Result:</string>
    <string name="coefficient">Coefficient: </string>
    <string name="copyButton">Copy result</string>
    <string name="copyCoefficientButton">Copy coefficient</string>
    <string name="updateRateInformation">Update rate</string>
    <string-array name="changeCurrency">
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>UAH</item>
        <item>PLN</item>
        <item>GBP</item>
        <item>CZK</item>
        <item>BYN</item>
    </string-array>
    <string name="noInternet">No Internet connection!</string>
    <string name="dataBaseNotUpdated">Rate is not updated. Please push</string>
    <string name="dataBaseUpdated">Rate updated</string>
    <string name="waitForRateUpdate">Please wait. Rate updating</string>
    <string name="fieldEmpty">The field is empty!</string>
    <string name="Hint_coefficient">Here will be coefficient</string>
    <string name="Hint">Your result will be here</string>
    <string name="button_show">Show</string>
    <string name="graphics_of_exchange_rates">Graphics of exchange rates</string>
</resources>