<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="156dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coefficient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coefficient"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/coefficientView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Here will be coefficient"
                android:padding="15dp"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text=""
                android:textColor="#000000"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="359dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/changeСurrency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:entries="@array/changeСurrency" />

            <EditText
                android:id="@+id/enteredValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/enter_value"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/copyCoefficientButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/reverseButton"
                android:layout_toEndOf="@+id/copyButton"
                android:text="@string/copyCoefficientButton" />

            <Button
                android:id="@+id/copyButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/copyButton" />

            <ImageButton
                android:id="@+id/reverseButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:srcCompat="@android:drawable/ic_popup_sync" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/changeResultСurrency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/changeСurrency"
                android:gravity="right" />

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your result will be here"
            android:inputType="number"
            android:padding="15dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="359dp" />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:onClick="setConvertedValue"
            android:text="@string/convert_button"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="536dp" />

        <TextView
            android:id="@+id/UpdateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>